--- a/cluster/apps/comms/mautrix-facebook/helm-release.yaml
+++ b/cluster/apps/comms/mautrix-facebook/helm-release.yaml
@@ -39,7 +39,13 @@ spec:
             name: mautrix-facebook-config
 
     postgresql:
-      enabled: false
+      enabled: true
+      postgresqlUsername: mautrixuser
+      postgresqlPassword: mautrixpass
+      postgresqlDatabase: mautrix-facebook
+      persistence:
+        enabled: true
+        existingClaim: mautrix-facebook-postgresql-pvc
 
     resources:
       requests:
