--- a/cluster/apps/comms/mautrix-facebook/kustomization.yaml
+++ b/cluster/apps/comms/mautrix-facebook/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - config.yaml
   # - mautrix-facebook-data-pvc.yaml
+  - mautrix-facebook-postgresql-pvc.yaml
   - helm-release.yaml
