change the command paraemter for mautrix-facebook

--- a/cluster/apps/comms/mautrix-facebook/helm-release.yaml
+++ b/cluster/apps/comms/mautrix-facebook/helm-release.yaml
@@ -22,6 +22,9 @@ spec:
       repository: dock.mau.dev/mautrix/facebook
       tag: latest
 
+    command:
+      - exec python3 -m mautrix_facebook -c /data/config.yaml
+
     nameOverride: mautrix-facebook
 
     service:
