add secrets for mautrix

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -81,14 +81,17 @@ stringData:
   SECRET_CLOUDFLARE_DYNDNS_TOKEN: ENC[AES256_GCM,data:Jc2yTzlwVf6Gs6UAaE8Ff+M8Bixid9f4QItMXQOfvoQlCAPRq6cmDg==,iv:xIruwFjCbJqXPJHHSSzyVHSfE9LqtqsPOB2P9m6iVXY=,tag:IcTCTVTz7h+JW9oI/2y7CA==,type:str]
   SECRET_MATRIX_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:Lazo+CiDTjStdd4/QlI7bAf5tw7oG8BpIB1O4eOkvr1kRLrrVaBqzLwAfEzQat78,iv:UDDFGwgZTrVtwjVaO07Bg3rT5P6Lo9Uxa/TIdhOAnuk=,tag:yZRNHxVfv4ynngxErJknow==,type:str]
   SECRET_MATRIX_REDIS_PASSWORD: ENC[AES256_GCM,data:qNxwNEIV9VPbQcLA59flJle9Ix35dzPIvzQy7P1cIMniafIoLk3mqJnLXun/60V+,iv:dnJQC2CnL+J4Pq44U0xObGblI7EWC1PUJ7YqrQLa5gg=,tag:QjjtdTRtgixfJQyl6sntIg==,type:str]
+  SECRET_MAUTRIX_FACEBOOK_AS_TOKEN: ENC[AES256_GCM,data:uLs6bfwn37NytJM/hhkguSvlt5I6WJ8wQhDXsgkSeND6UWqx2/XVm7A2obB0NIVCmIudtI3jO1eBhKhKKWpThw==,iv:k1XEE6t1OtRi+aY60S6sHbLbciZkhCez5Hi8po9tCSc=,tag:xHX25wDobjF9W1MhD+4QMA==,type:str]
+  SECRET_MAUTRIX_FACEBOOK_HS_TOKEN: ENC[AES256_GCM,data:pRGJty+6IYzWSsRF3BETaeSikW4ywQSrlHQCMKXtHmL3kAWCe2IOjWHGeqrRUSsIktAB2Weq4LQUwbOVxGZmaQ==,iv:v1CNDBW9g0dTlKE3ekHKa7hGARhpAWESevOLZguCz+I=,tag:vrd+WusB2ZAgglvJoTPD7g==,type:str]
+  SECRET_MAUTRIX_FACEBOOK_SENDER_LOCALPART: ENC[AES256_GCM,data:Mr5PuqUtJ+STeuwln4lpZR/OFWZpS6bitb3zvNUHxmh/XMAmgrW8ko77OKK7juADZO/rKF/beTVY8CXy8eAXww==,iv:h1TpY4qLGfmDij7uxBthaXfDG/fze3BE/1NNTd2CV/k=,tag:Pov24pEJKgsf/rAEcR+OjA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-23T00:06:35Z"
-  mac: ENC[AES256_GCM,data:5GOV5rSRgDG4jACmUjw9BIyIH13dSxfndSYnR2uWSTDxwpFc0zMYst9P05CTr2OHvJNGwcHHh/Qqjilw+RsTWTS6EzocY7AmOaMcxWtzxZe/vaI9ngHDUqpvzPyYRPz1q+N9ixZGKldcQsOubp41rvPQvfTq9coG+UHf74jqJbk=,iv:1T45FehRbu+eSZpSriKaB1bM4EXaCi0PyVQQmhmhATY=,tag:mX2t1HXGeBu9T4NRcmlAkA==,type:str]
+  lastmodified: "2021-10-24T03:25:27Z"
+  mac: ENC[AES256_GCM,data:Z8VuEGeKo8TosZK9HsAO1PblxqLU1D4Rn6tfQ0UNn0FhPyylxoGjkV3EyUdyhBNo2PFKsJA8NGCz4QT1Xht0jC68/PEc5fv8D6DAQnlHhEGVrnjl5iH/sAOnGikH4s1fWiUMawcsey+Wv3HMaIMkVcyWUO6YharHzlz24OJoyDg=,iv:x/WRnCmYy34rnrGd39FLjRQ38wnejTg/hvrf6jZiKzU=,tag:EkmrgbZy0PxINAGokKQpzQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
