--- a/cluster/apps/comms/mautrix-facebook/config.yaml
+++ b/cluster/apps/comms/mautrix-facebook/config.yaml
@@ -265,8 +265,8 @@ data:
       #   domain - All users on that homeserver
       #     mxid - Specific user
       permissions:
-          "example.com": "user"
-          "@admin:example.com": "admin"
+          "${SECRET_PUBLIC_DOMAIN}": "user"
+          "@ryan:${SECRET_PUBLIC_DOMAIN}": "admin"
 
     # Python logging configuration.
     #
