--- a/cluster/apps/comms/mautrix-facebook/helm-release.yaml
+++ b/cluster/apps/comms/mautrix-facebook/helm-release.yaml
@@ -61,3 +61,38 @@ spec:
         cpu: 100m
       limits:
         memory: 500Mi
+
+    probes:
+      liveness:
+        custom: true
+        spec:
+          failureThreshold: 5
+          httpGet:
+            path: /_matrix/mau/live
+            port: http
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+      startup:
+        custom: true
+        spec:
+          failureThreshold: 5
+          httpGet:
+            path: /_matrix/mau/live
+            port: http
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+      readiness:
+        custom: true
+        spec:
+          failureThreshold: 5
+          httpGet:
+            path: /_matrix/mau/live
+            port: http
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
