--- a/cluster/apps/comms/mautrix-facebook/config.yaml
+++ b/cluster/apps/comms/mautrix-facebook/config.yaml
@@ -65,12 +65,12 @@ data:
       # Public part of web server for out-of-Matrix interaction with the bridge.
       public:
           # Whether or not the public-facing endpoints should be enabled.
-          enabled: false
+          enabled: true
           # The prefix to use in the public-facing endpoints.
           prefix: /public
           # The base URL where the public-facing endpoints are available. The prefix is not added
           # implicitly.
-          external: https://example.com/public
+          external: https://mau-fb.${SECRET_DOMAIN}/public
           # Shared secret for integration managers such as mautrix-manager.
           # If set to "generate", a random string will be generated on the next startup.
           # If null, integration manager access to the API will not be possible.
