add tokens for slack

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -84,14 +84,16 @@ stringData:
   SECRET_MAUTRIX_FACEBOOK_AS_TOKEN: ENC[AES256_GCM,data:i0Xh7X/MK4UZMhrFzLv7AYMqgZ6zEH85YgBHWeLkJgzrDigoFJ4bpOxMiYt7fjDsGSJWzn+a3TFC6gryATCApA==,iv:muP7GbETM81w7Yqs8Z1OWUgR57hJCHXXt000eeB5bik=,tag:Ps5EuAybpCy007L3cT1Vag==,type:str]
   SECRET_MAUTRIX_FACEBOOK_HS_TOKEN: ENC[AES256_GCM,data:vJMIFkg77Ix08+zFTptY3BMZMIYQZ/qS7RmAJc+434X2FVcDEaxDv9NQICYaCZjJIMS7uM7CepiPo2YH95sY6w==,iv:G3tYX2pCz1bHHAshbk6cBiUsngqbRfHVFWvKF45uNoM=,tag:s/uF0lvtko3ZTMtTOfErmA==,type:str]
   SECRET_MAUTRIX_FACEBOOK_SENDER_LOCALPART: ENC[AES256_GCM,data:yMcqcPci7isOBnXNbLXalYHKPr6Ab4KLbGjYqG+Pk7Ax8dlJV7EQ6Ys4Nc7vLVW+jef2djxbLi2CLTTsE/qWyg==,iv:CnNF/uSOXXMjRFc00dWsPSqQdgWpnKvStpog233pxJY=,tag:7Pwt1bCh/c1ceSnnILMTOQ==,type:str]
+  SECRET_MATRIX_SLACK_HS_TOKEN: ENC[AES256_GCM,data:qZ+RuvWOc70wWvalhf3GGE2ORMJeVtHpjdA7UTgRRSdPpClIfYoAa0s+rAG9nP4MPebWOCeDw1J2bXGjGW+oUA==,iv:FalaHtDjuc9Nar7TuqNYUbJGezKBfDulP44eV+IQjCY=,tag:mT6gNxqH928oEwL33JTxhw==,type:str]
+  SECRET_MATRIX_SLACK_AS_TOKEN: ENC[AES256_GCM,data:50VUdgtG54veXtXCkgUr5aSGquDLo/drwCA/Jlvye57dlVpgyBb8GW1eIfRRXj3S13R0/4yvm3EfbhLP9k1/Gw==,iv:sGqSojsHbbMXVfy6qJTCsGzApyabkvVT97YrtSPPp20=,tag:buna3ESvmyUPrYGNpfQwlw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-24T04:04:52Z"
-  mac: ENC[AES256_GCM,data:0zEBnY44sH5iLbh64khRP8FmIl0PxiXXXOXH809exFluMtok/NKODZyzslmyoREVRIZ4UaSyiWOTE+ZB7z03bmsDKqSDrcUdaStbU6NE42XvR9Qk6Atrs8l+JOKl8etwLomILXEOVaiznwmHeZYBi7JO8UWr/rMEndO0ttkzLf0=,iv:WhLTGivbXOVDiHFqQSLmGZqaVBSqIRWOfScstg3yeFM=,tag:FtbdXTLaz6dVnuy9szXIlg==,type:str]
+  lastmodified: "2021-10-25T17:32:08Z"
+  mac: ENC[AES256_GCM,data:HB0YbsN8Eh//iyL8q7Bkj+sXjwcxeXzSDG7RbYRKVhZhAt3gJovy+/SVHmg7mlGj05P2FiABjA2wfjviKcDPOCqtGZXSMzWIgQDvpLv6/cZfrZl0EgHSfuUbufKX6/FyLFzc3vzU/THD00xnlcqynuu5fd7iVLzgKDc3naCJO/Y=,iv:AmwO/yDYnwvKIkCSQwpbqP/Ie0dX87pGlhHhgSfWc0I=,tag:PO70FKoLBS2ysd6ba8B1DQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
