--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -44,6 +44,7 @@ spec:
 
       app_service_config_files:
         - /data/mautrix-facebook/registration.yaml
+        - /data/matrix-slack/slack-registration.yaml
 
     ingress:
       enabled: true
@@ -89,6 +90,14 @@ spec:
             items:
               - key: registration.yaml
                 path: registration.yaml
+        - name: matrix-slack
+          configMap:
+            name: matrix-slack-config
+            items:
+              - key: slack-registration.yaml
+                path: slack-registration.yaml
       extraVolumeMounts:
         - name: mautrix-facebook
           mountPath: /data/mautrix-facebook
+        - name: matrix-slack
+          mountPath: /data/matrix-slack
