add matrix media ceph object store

--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -13,3 +13,4 @@ resources:
   # - ceph-object-bucket.yaml
   - loki-ceph-object-bucket.yaml
   - thanos-ceph-object-bucket.yaml
+  - matrix-media-ceph-object-bucket.yaml
