cannot update this file

--- a/cluster/core/rook-ceph/storage/ceph-bucket-storage-class.yaml
+++ b/cluster/core/rook-ceph/storage/ceph-bucket-storage-class.yaml
@@ -8,4 +8,4 @@ reclaimPolicy: Delete
 parameters:
   objectStoreName: object-store
   objectStoreNamespace: rook-ceph
-  region: default
+  region: east-us-1
