--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -71,16 +71,16 @@ spec:
     - kind: ConfigMap
       name: matrix-media-ceph-bucket
       valuesKey: BUCKET_NAME
-      targetPath: config.datastores.opts[0].bucketName
+      targetPath: config.datastores[0].opts.bucketName
     - kind: ConfigMap
       name: matrix-media-ceph-bucket
       valuesKey: BUCKET_HOST
-      targetPath: config.datastores.opts[0].endpoint
+      targetPath: config.datastores[0].opts.endpoint
     - kind: Secret
       name: matrix-media-ceph-bucket
       valuesKey: AWS_ACCESS_KEY_ID
-      targetPath: config.datastores.opts[0].accessKeyId
+      targetPath: config.datastores[0].opts.accessKeyId
     - kind: Secret
       name: matrix-media-ceph-bucket
       valuesKey: AWS_SECRET_ACCESS_KEY
-      targetPath: config.datastores.opts[0].accessSecret
+      targetPath: config.datastores[0].opts.accessSecret
