these should get overwritten

--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -29,6 +29,10 @@ spec:
           opts:
             tempPath: ""
             ssl: false
+            bucketName: 
+            endpoint: 
+            accessKeyId: 
+            accessSecret: 
     admins:
       - "@ryan:${SECRET_PUBLIC_DOMAIN}"
 
