--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -72,16 +72,16 @@ spec:
     - kind: ConfigMap
       name: matrix-media-ceph-bucket
       valuesKey: BUCKET_NAME
-      targetPath: config.datastores[1].opts.bucketName
+      targetPath: config.datastores.opts.bucketName
     - kind: ConfigMap
       name: matrix-media-ceph-bucket
       valuesKey: BUCKET_HOST
-      targetPath: config.datastores[1].opts.endpoint
+      targetPath: config.datastores.opts.endpoint
     - kind: Secret
       name: matrix-media-ceph-bucket
       valuesKey: AWS_ACCESS_KEY_ID
-      targetPath: config.datastores[1].opts.accessKeyId
+      targetPath: config.datastores.opts.accessKeyId
     - kind: Secret
       name: matrix-media-ceph-bucket
       valuesKey: AWS_SECRET_ACCESS_KEY
-      targetPath: config.datastores[1].opts.accessSecret
+      targetPath: config.datastores.opts.accessSecret
