add matrix_media s3 creds

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -86,14 +86,16 @@ stringData:
   SECRET_MAUTRIX_FACEBOOK_SENDER_LOCALPART: ENC[AES256_GCM,data:yMcqcPci7isOBnXNbLXalYHKPr6Ab4KLbGjYqG+Pk7Ax8dlJV7EQ6Ys4Nc7vLVW+jef2djxbLi2CLTTsE/qWyg==,iv:CnNF/uSOXXMjRFc00dWsPSqQdgWpnKvStpog233pxJY=,tag:7Pwt1bCh/c1ceSnnILMTOQ==,type:str]
   SECRET_MATRIX_SLACK_HS_TOKEN: ENC[AES256_GCM,data:qZ+RuvWOc70wWvalhf3GGE2ORMJeVtHpjdA7UTgRRSdPpClIfYoAa0s+rAG9nP4MPebWOCeDw1J2bXGjGW+oUA==,iv:FalaHtDjuc9Nar7TuqNYUbJGezKBfDulP44eV+IQjCY=,tag:mT6gNxqH928oEwL33JTxhw==,type:str]
   SECRET_MATRIX_SLACK_AS_TOKEN: ENC[AES256_GCM,data:50VUdgtG54veXtXCkgUr5aSGquDLo/drwCA/Jlvye57dlVpgyBb8GW1eIfRRXj3S13R0/4yvm3EfbhLP9k1/Gw==,iv:sGqSojsHbbMXVfy6qJTCsGzApyabkvVT97YrtSPPp20=,tag:buna3ESvmyUPrYGNpfQwlw==,type:str]
+  SECRET_MATRIX_MEDIA_S3_ACCESS_KEY_ID: ENC[AES256_GCM,data:U7xXqcPJ2TSuDIZqCTtc5kjfDNM=,iv:ms/ee2DdOLoIoPUyaIWaRdECyNef3F27b3mpw36cEN4=,tag:EyWviJytY7SkssuS3+8HxQ==,type:str]
+  SECRET_MATRIX_MEDIA_S3_ACCESS_SECRET: ENC[AES256_GCM,data:hUpVS9/q+/g4JtIIHrn5qdgSOZoafMys56kbqMfsu2A6E1I18RdsqQ==,iv:79AXH/awSlD3NaHNZ98EPeLRl1CoURXP1zXzKVhHTHU=,tag:BDrW517aAZSeL+5s9R6s4A==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-25T17:32:08Z"
-  mac: ENC[AES256_GCM,data:HB0YbsN8Eh//iyL8q7Bkj+sXjwcxeXzSDG7RbYRKVhZhAt3gJovy+/SVHmg7mlGj05P2FiABjA2wfjviKcDPOCqtGZXSMzWIgQDvpLv6/cZfrZl0EgHSfuUbufKX6/FyLFzc3vzU/THD00xnlcqynuu5fd7iVLzgKDc3naCJO/Y=,iv:AmwO/yDYnwvKIkCSQwpbqP/Ie0dX87pGlhHhgSfWc0I=,tag:PO70FKoLBS2ysd6ba8B1DQ==,type:str]
+  lastmodified: "2021-10-25T21:51:46Z"
+  mac: ENC[AES256_GCM,data:VCwAWhAhkEH8RBCzazBktxLjjKFnmvbkbcvqzw/QLqDMx25rL5J+yIEo+QTOCfZXTkzB2pskt6D346w1JLTU9DXsCCW1CHlMlLNrzhI9xS9HVrHw5J3iDqf4fCNK28JSEF0e99W9ztC8c1HkG9pKsJGMfgf7LE93XOVOQDWXrhQ=,iv:TNcCtVXL/mqbCOQLsnk4PyTN7ZHMkEy2909DWLkPsIA=,tag:tXbNgrmSV3lZ0EOunpiiEg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
