--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -46,18 +46,19 @@ spec:
           enabled: false
 
     ingress:
-      enabled: false
-      traefikPaths: true
+      enabled: true
       className: traefik
       annotations:
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-production
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+      hosts:
+        - host: matrix.${SECRET_DOMAIN}
+          paths:
+            - "/_matrix/media"
       tls:
-        - secretName: matrix-media-cert
+        - secretName: matrix-cert
           hosts:
-            - mm.${SECRET_DOMAIN}
+            - matrix.${SECRET_DOMAIN}
 
     postgresql:
       enabled: true
