no longer use the media pvc

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -79,8 +79,7 @@ spec:
         enabled: false
 
     persistence:
-      enabled: true
-      existingClaim: matrix-media-pvc
+      enabled: false
 
     synapse:
       extraVolumes:
