drop the ingress for now

--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -46,7 +46,7 @@ spec:
           enabled: false
 
     ingress:
-      enabled: true
+      enabled: false
       className: traefik
       annotations:
         external-dns/is-public: "true"
