--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -28,24 +28,25 @@ spec:
     workers:
       media_repository:
         enabled: true
-      extraVolumes:
-        - name: mautrix-facebook
-          configMap:
-            name: mautrix-facebook-config
-            items:
-              - key: registration.yaml
-                path: registration.yaml
-        - name: matrix-slack
-          configMap:
-            name: matrix-slack-config
-            items:
-              - key: slack-registration.yaml
-                path: slack-registration.yaml
-      extraVolumeMounts:
-        - name: mautrix-facebook
-          mountPath: /data/mautrix-facebook
-        - name: matrix-slack
-          mountPath: /data/matrix-slack
+      default:
+        volumes:
+          - name: mautrix-facebook
+            configMap:
+              name: mautrix-facebook-config
+              items:
+                - key: registration.yaml
+                  path: registration.yaml
+          - name: matrix-slack
+            configMap:
+              name: matrix-slack-config
+              items:
+                - key: slack-registration.yaml
+                  path: slack-registration.yaml
+        volumeMounts:
+          - name: mautrix-facebook
+            mountPath: /data/mautrix-facebook
+          - name: matrix-slack
+            mountPath: /data/matrix-slack
 
     extraConfig:
       email:
