--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -102,7 +102,8 @@ spec:
         enabled: false
 
     persistence:
-      enabled: false
+      enabled: true
+      existingClaim: matrix-media-pvc
 
     synapse:
       extraVolumes:
