--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -16,6 +16,9 @@ spec:
         name: ananace-charts
         namespace: flux-system
       interval: 5m
+  dependsOn:
+    - name: matrix-synapse
+      namespace: comms
   values:
     image:
       repository: turt2live/matrix-media-repo
