try this back the way it was

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
 
     workers:
       media_repository:
-        enabled: true
+        enabled: false
       default:
         volumes:
           - name: mautrix-facebook
