--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
             ssl: false
             bucketName: matrix-media
             endpoint: rook-ceph-rgw-object-store.rook-ceph.svc
-            accessKeyID: ${SECRET_MATRIX_MEDIA_S3_ACCESS_KEY_ID}
+            accessKeyId: ${SECRET_MATRIX_MEDIA_S3_ACCESS_KEY_ID}
             accessSecret: ${SECRET_MATRIX_MEDIA_S3_ACCESS_SECRET}
 
     admins:
