--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -48,19 +48,19 @@ spec:
         identicons:
           enabled: false
 
-    # ingress:
-    #   className: traefik
-    #   annotations:
-    #     external-dns/is-public: "true"
-    #     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-    #   hosts:
-    #     - host: matrix.${SECRET_DOMAIN}
-    #       paths:
-    #         - "/_matrix/media"
-    #   tls:
-    #     - secretName: matrix-cert
-    #       hosts:
-    #         - matrix.${SECRET_DOMAIN}
+    ingress:
+      className: traefik
+      annotations:
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+      hosts:
+        - host: matrix.${SECRET_DOMAIN}
+          paths:
+            - "/_matrix/media"
+      tls:
+        - secretName: matrix-cert
+          hosts:
+            - matrix.${SECRET_DOMAIN}
 
     postgresql:
       enabled: true
