--- a/cluster/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/cluster/apps/comms/matrix-media-repo/helm-release.yaml
@@ -49,6 +49,7 @@ spec:
           enabled: false
 
     ingress:
+      enabled: true
       className: traefik
       annotations:
         external-dns/is-public: "true"
