--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -102,8 +102,7 @@ spec:
         enabled: false
 
     persistence:
-      enabled: true
-      existingClaim: matrix-media-pvc
+      enabled: false
 
     synapse:
       extraVolumes:
