fix breaking cert-manager stuff

--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -20,22 +20,15 @@ spec:
     installCRDs: false
     webhook:
       enabled: true
-      tolerations:
-      - key: "arm"
-        operator: "Exists"
     extraArgs:
-    - --dns01-recursive-nameservers=1.1.1.1:53
-    - --dns01-recursive-nameservers-only
-    tolerations:
-    - key: "arm"
-      operator: "Exists"
-    cainjector:
-      replicaCount: 1
-      # extraArgs:
-      #   - --leader-elect=false
-      tolerations:
-      - key: "arm"
-        operator: "Exists"
+      - --dns01-recursive-nameservers=1.1.1.1:53
+      - --dns01-recursive-nameservers-only
+    replicaCount: 1
+    podDnsPolicy: "None"
+    podDnsConfig:
+      nameservers:
+        - "1.1.1.1"
+        - "9.9.9.9"
     prometheus:
       enabled: true
       servicemonitor:
