override the name

--- a/cluster/apps/comms/matrix-synapse-admin/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse-admin/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
     image:
       repository: awesometechnologies/synapse-admin
       tag: latest
-
+    nameOverride: matrix-synapse-admin
     service:
       main:
         ports:
