add authentik secret for matrix

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -20,6 +20,7 @@ stringData:
   SECRET_DEX_K8S_AUTHENTICATOR_CLIENT_SECRET: ENC[AES256_GCM,data:N5ksmryawu6xofHB4e87lzzP7JxTL2149rafBZ2OC2QBHVgsu4SWgg==,iv:iH+4ydQkveJ1fwz4fVTADEUXjduEtybM28w/5KFH+Aw=,tag:IwkKQcXzGQFEcn4C8kNuNw==,type:str]
   SECRET_AUTHENTIK_GRAFANA_CLIENT_SECRET: ENC[AES256_GCM,data:KTSOBl3OOZjN2JRQC+iKApqKwhmlJIZyIU6fM3CZ580fygUHsgd0dA==,iv:aYITLBBCgtIchkvKpW5bs7sVsEavj31mU3DB2Hs9rQ4=,tag:nWg5vUK0A790zJj7PFnERw==,type:str]
   SECRET_AUTHENTIK_VIKUNJA_CLIENT_SECRET: ENC[AES256_GCM,data:Ftphce2UStE+MpM1ymebgPWyQuGAIjxpZZbtd99Ha67vYSB6zRc4ZcPUIaluu5sSlQYmy/8yXDknBvHAOFmOasvTvZeT8jkWUxnek1elcle2UuoVWD3zaSIfAJ5DLNBWI7eZyPVyAWt2C5OrV9qpbcO522fd5qd1z6tGYQUL1YI=,iv:N1pFUYX2QAqxwBOVLS1u7g/mh+po/P04kP0aSJDPSGM=,tag:zJeeIFr3CEDWVotYe3xgag==,type:str]
+  SECRET_AUTHENTIK_MATRIX_CLIENT_SECRET: ENC[AES256_GCM,data:O/KwWydxGjmgoq0MVMqHu5OXBQj7+WUqyRrWfLq2W5Ci1C2oOXDi2QtfrpjrJVgfjXPUMo1m1zUdbpcJd0J4e7f6IcQ6aB6O1QVq8X7cN8mRrm3i4OV9LLOKLaiPLwR2kYvB4m30oFYyP4/OqWHoA2mpqB0M8CEDOTL+z8kK2ec=,iv:TFEiK0Qq1GQ+6SRW0HN2a2ROji0fjrlQsdv/MiYjGr4=,tag:+JgE3uj2u7JSAhRVdxOyVQ==,type:str]
   SECRET_DEX_NEXTCLOUD_CLIENT_SECRET: ENC[AES256_GCM,data:+P5nPttCphAWqGgzRAWE2nuSDcTlzxByHhp33Iu5LO/omgGAO3i8VA==,iv:qfM0PBh4fXUL7SpCu0XRQSr2rq4/uEq404u4SqLR0+0=,tag:odraAF3Ir7TAIHmF/D/Etg==,type:str]
   SECRET_DEX_OAUTH2_PROXY_CLIENT_SECRET: ENC[AES256_GCM,data:+IeX1ovz0hKhmO+Dmj9LM4QoU3X13wgxQl1lXJtT4VJ739o11xfkMA==,iv:wjEv1UaA0uW2cDtL27PwjT1H5ETGQhlHJ6HqQNdVhyk=,tag:WpDzwDf6KJoWTdP1ORt+9Q==,type:str]
   SECRET_DEX_GITEA_CLIENT_SECRET: ENC[AES256_GCM,data:CgzVrqAVUBJ0v0c/UBWmuC6ge3Suk2/KVhQ3iUohhXYOlXDtZvK4zQ==,iv:C12rsDlwtfQZsEtYUBicd79ZUoQSfNY6ChJE62DPZak=,tag:NA4B+XPut/kSpF1bxKpMAQ==,type:str]
@@ -94,8 +95,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-25T21:51:46Z"
-  mac: ENC[AES256_GCM,data:VCwAWhAhkEH8RBCzazBktxLjjKFnmvbkbcvqzw/QLqDMx25rL5J+yIEo+QTOCfZXTkzB2pskt6D346w1JLTU9DXsCCW1CHlMlLNrzhI9xS9HVrHw5J3iDqf4fCNK28JSEF0e99W9ztC8c1HkG9pKsJGMfgf7LE93XOVOQDWXrhQ=,iv:TNcCtVXL/mqbCOQLsnk4PyTN7ZHMkEy2909DWLkPsIA=,tag:tXbNgrmSV3lZ0EOunpiiEg==,type:str]
+  lastmodified: "2021-11-01T21:21:36Z"
+  mac: ENC[AES256_GCM,data:a3dExE0+/hhWK8SSVo/mNcXIAj3dS5SqW4ycswYYpcKUDsWFOGicovjd4PS9KvPUa+r13R/p34qo6hdgT60XlRkShjRcn6GmV+4DiODCOqmqB7bLEMONoJ9hq+EMXNtvFx/gmgzpP5aVRLl9NDd3bPfGT9ZkuJfHmCwzgq3FXdM=,iv:+dk9CySYvkyL7jtcQ0M7P2oXcGt3aPXwR+OwbN0ABn4=,tag:M4yHkSh5rDh5uGGoQJj0Fw==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
