--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -69,6 +69,22 @@ spec:
         - /data/mautrix-facebook/registration.yaml
         - /data/matrix-slack/slack-registration.yaml
 
+      oidc_providers:
+        - idp_id: authentik
+          idp_name: authentik
+          discover: true
+          issuer: "https://id.holthome.net/application/o/matrix/"
+          client_id: "matrix"
+          client_secret: ${SECRET_AUTHENTIK_MATRIX_CLIENT_SECRET}
+          scopes:
+            - "openid"
+            - "profile"
+            - "email"
+          user_mapping_provider:
+            config:
+              localpart_template: "{{ '{{ user.name }}' }}"
+              display_name_template: "{{ '{{ user.name|capitalize }}' }}"
+
     ingress:
       enabled: true
       traefikPaths: true
