--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -80,10 +80,10 @@ spec:
             - "openid"
             - "profile"
             - "email"
-          # user_mapping_provider:
-          #   config:
-          #     localpart_template: "{{ '{{ user.name }}' }}"
-          #     display_name_template: "{{ '{{ user.name|capitalize }}' }}"
+          user_mapping_provider:
+            config:
+              localpart_template: "{{ '{{ user.name }}' }}"
+              display_name_template: "{{ '{{ user.name|capitalize }}' }}"
 
     ingress:
       enabled: true
