--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -83,7 +83,7 @@ spec:
           user_mapping_provider:
             config:
               localpart_template: "{{ user.name }}"
-              display_name_template: "{{ user.name|capitalize }}"
+              display_name_template: "{{ user.name }}"
 
     ingress:
       enabled: true
