--- a/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
+++ b/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
       deployEnv: prod
     image:
       repository: raspbernetes/dex-k8s-authenticator
-      tag: 1.4.0
+      tag: v1.4.0
     ingress:
       enabled: true
       annotations:
