--- a/cluster/apps/collab/openkm/kustomization.yaml
+++ b/cluster/apps/collab/openkm/kustomization.yaml
@@ -2,4 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - data-pvc.yaml
+  - openkm-postgresql-pvc.yaml
   - helm-release.yaml
