--- a/cluster/apps/collab/openkm/kustomization.yaml
+++ b/cluster/apps/collab/openkm/kustomization.yaml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - openkm-cfg-configmap.yaml
+  - server-xml-configmap.yaml
   - data-pvc.yaml
   - openkm-postgresql-pvc.yaml
   - helm-release.yaml
