--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -28,6 +28,7 @@ resources:
   - ingress-nginx-charts.yaml
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
+  - k8up-charts.yaml
   - kasten-charts.yaml
   - kubernetes-external-secrets-charts.yaml
   - kubernetes-sigs-descheduler-charts.yaml
