--- a/cluster/apps/backup-system/k8up/kustomization.yaml
+++ b/cluster/apps/backup-system/k8up/kustomization.yaml
@@ -1,7 +1,5 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - _pvc
-  - k8up
-  - benji
-  - velero
+  - helm-release.yaml
