--- a/cluster/apps/backup-system/k8up/helm-release.yaml
+++ b/cluster/apps/backup-system/k8up/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.appuio.ch
       chart: k8up
-      version: v1.0.70
+      version: 2.0.2
       sourceRef:
         kind: HelmRepository
         name: k8up-charts
