enable postgres diagnostic mode

--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -61,6 +61,8 @@ spec:
     mariadb:
       enabled: false
     postgresql:
+      diagnosticMode:
+        enabled: true
       existingSecret: home-assistant-postgresql-secret
       enabled: true
       persistence:
